# email-filters-spreadsheet

./: .gitignore  README.md  pyproject.toml
life_script/: sheets.py
templates/: filter_template.siv  header.siv
